--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,16 @@
 /* =========================================================*/
-/*                    COLORS AND FONTS                      */
+/*                    GLOBAL VARIABLES                      */
 /* =========================================================*/
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mate&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Della+Respira&display=swap');
 
-@font-face {
-    font-family: 'Southam Demo';
-    src: url(../fonts/SouthamDemo.otf) format('opentype');
-    /* Adding all src */
-    src: url(../fonts/SouthamDemo.eot); /* IE9 Compat Modes */
-    src: url(../fonts/SouthamDemo.woff2) format('woff2'), /* Super Modern Browsers */
-         url(../fonts/SouthamDemo.woff) format('woff'), /* Pretty Modern Browsers */
-         url(../fonts/SouthamDemo.ttf)  format('truetype'); /* Safari, Android, iOS */
-    
-}
-@font-face {
-    src: url(../fonts/Unique.ttf) format('truetype');
-    font-family: 'Unique';
-}
-@font-face {
-    src: url(../fonts/Belleza-Regular.ttf) format('truetype');
-    font-family: 'Belleza';
-}
-@font-face {
-    src: url(../fonts/NotoSans-Regular.ttf) format('truetype');
-    font-family: 'Noto Sans';
-}
 :root {
     --clr-primary-200: #f2f2f2;
     --clr-primary-400: #5e5e5e;
     --clr-primary-900: #242424;
 
-    --ff-primary: 'Raleway', sans-serif;
+    --ff-primary: 'Palatino';
     /* --ff-primary: 'Mate', serif; */
     /* --ff-primary: 'Cutive Mono', monospace; */
-    --ff-headings: 'Della Respira', serif;
+    --ff-headings: 'Abril Fatface':
     /* --ff-headings: 'Belleza'; */
 }
 /* =========================================================*/
@@ -62,6 +36,10 @@ html {
 }
 body {
     position: relative;
+    background-color: var(--clr-primary-200);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 a, button {
     cursor: url('../images/pointer-filled.png'), auto;
@@ -74,67 +52,8 @@ a, button {
 .animate__animated.animate__fadeInUp {
     --animate-duration: 4s;
 }
-/* =========================================================*/
-/*                             NAV                          */
-/* =========================================================*/
- nav {
-    display: flex;
-    position: sticky; 
-    justify-content: center;
-    top: 0;
-    height: 15vh;
-    z-index: 1;  
-    transition: all .5s ease-in-out 0s;
-    background-color: var(--clr-primary-200);
-}
 
-nav .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    max-width: 1200px;
-    text-align: center;
-    padding: 15px;
-}
-.logo {
-    width: 90px;
-}
 
-.logo img {
-    width: 90%;
-}
-nav .container ul {
-    list-style: none;
-}
-nav .container ul li {
-    display: inline-block;
-    transition: background-color 0.2s ease-in-out;
-}
-nav .container ul li:hover {
-    background-color: var(--clr-primary-400);
-    border-radius: 5px;
-}
-nav .container ul li a {
-    font-family: var(--ff-headings);
-    display: inline-block;
-    padding: 10px 20px;
-    color: var(--clr-primary-900);
-    text-decoration: none;
-    text-transform: uppercase;
-}
-nav .container ul li a:hover {
-    color: white;
-}
-nav .container ul li.active {
-    /* Hover button */
-    background-color: var(--clr-primary-400); 
-    border-radius: 5px;
-}
-nav .container ul li.active a {
-    /* Hover button text color */
-    color: white;
-}
 /* =========================================================*/
 /*                          SECTIONS                        */
 /* =========================================================*/
@@ -146,15 +65,10 @@ section {
     width: 100%; 
     padding: 0 15vw 0 15vw;
 }
-section h1 {
-    font-family: var(--ff-headings);
-    font-size: 3rem;
-}
-section h2 {
-    font-family: var(--ff-headings);
-    font-size: 2rem;
-    padding: 1.25rem 0;
-}
+
+/* =========================================================*/
+/*                REVEAL ON SCROLL EFFECT                   */
+/* =========================================================*/
 .reveal {
     position: relative; 
     transform: translateY(150px);
@@ -165,334 +79,9 @@ section h2 {
     transform: translateY(0px);
     opacity: 1;
 }
-/* =========================================================*/
-/*                           HOME                           */
-/* =========================================================*/
-#home {
-    height: 85vh;
-}
-#home p {
-    font-size: 1.75rem;
-}
-#home p.subheading {
-    margin-top: 1.5rem;
-    font-size: 1.5rem;
-}
-#home h1 {
-    font-family: 'Southam Demo';
-    font-size: 10rem;
-    font-weight: lighter;
-    color: var(--clr-primary-400);
-}
-#home .hero {
-    display: flex;
-    position: relative;
-    width: 75%;
-    max-width: 1200px;
-    flex-direction: column;
-    align-items: center;
-    /* padding: 0 0 0 6rem; */
-}
-#blob {
-    width: 100%;
-    position: absolute;
-    height: 100%;
-    z-index: -1;
-}
-/* =========================================================*/
-/*                          ABOUT                           */
-/* =========================================================*/
-#about {
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    background-color: var(--clr-primary-200);
-    padding-top:175px;
-    height: auto;
-}
-
-#about h1 {
-    font-family: 'Southam Demo';
-    font-size: 5rem;
-    font-weight: lighter;
-    color: var(--clr-primary-400);
-}
-#about .aboutMeContent{
-    display: flex; 
-    flex-direction: column;
-    width: 100%;
-    margin-top: 30px;
-    line-height: 24px;
-    color: var(--clr-primary-900);
-}
-
-#about .aboutMeContent p {
-    font-size: 1.125rem;
-    line-height: 1.5rem;
-}
-#about .aboutMeContent h2 {
-    font-family: 'Southam Demo';
-    font-size: 3rem;
-    color: var(--clr-primary-400);
-    font-weight: lighter;
-    margin-bottom: 1rem;
-}
-#about .aboutMeContent h3.tagline {
-    font-size: 1.5rem;
-}
-#about .aboutMeContent h3 {
-    font-family: var(--ff-headings);
-    margin: .5rem 0;
-}
-#about button:active {
-    transform: translateY(4px);
-}
-#about .atl {
-    width: 100%;
-    margin-bottom: -10px;
-}
-
-#about .atl img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-button {
-    border: none; 
-    margin: 20px 0 20px 0;
-    padding: 10px;
-    color: white;
-    font: var(--ff-body);
-    width: fit-content;
-    transition: background-color 0.5s ease, filter 0.2s ease-in-out, transform 0.2s;
-    background-color: var(--clr-primary-400);
-    border-radius: 5px;
-}
-button:hover {
-    color: var(--clr-primary-900);
-    background-color: white;
-    filter: drop-shadow(-1px 1px 3px var(--clr-primary-400));
-    transform: translateY(-4px);
-}
-/* =========================================================*/
-/*                          PROJECTS                        */
-/* =========================================================*/
-#projects {
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 3rem 0;
-    height: auto;
-}
-
-#projects h1 {
-    font-family: 'Southam Demo';
-    font-size: 5rem;
-    font-weight: lighter;
-    padding-bottom: 2rem;
-}
-
-.projectContainer {
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    width: 100%;
-    height: auto;
-}
-.projectCard { 
-    display: flex; 
-    width: 50%;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    position: relative;
-    color: var(--clr-primary-400);
-    background-color: var(--clr-primary-200);
-    padding: 45px;
-    margin: 2rem;
-}
-.projectCard h2 {
-    font-size: 1.75rem;
-}
-.projectCard .project-description {
-    height: 250px;
-}
-.projectCard p {
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-.projectCard a {
-    /* Make button as wide as text inside it */
-    width: fit-content;
-    padding: 10px; 
-    margin: 0;
-    background-color: var(--clr-primary-400);
-    text-decoration: none;
-    color: white;
-    border-radius: 5px;
-    transition: background-color .2s ease-in-out,
-                transform .2s ease-in-out;
-}
-.projectCard a:hover{
-    background-color: white;
-    transform: translateY(-4px);
-    filter: drop-shadow(1px 2px 4px #c3c3c3);
-    color: var(--clr-primary-900);
-}
-.projectCard a:active {
-    transform: translateY(4px);
-}
-.projectContainer img {
-    width: 100%;
-    filter: contrast(60%) grayscale(100%);
-    border-radius: 5px;
-    transition: filter 0.5s;
-    margin: 1rem 0;
-}
-.projectContainer img:hover {
-    filter: contrast(60%) grayscale(0%);
-}
-.projectContainer img.portfolio-mockup {
-    filter: contrast(70%);  
-}
-.projectContainer img.portfolio-mockup:hover {
-    filter: contrast(100%);
-}
-.projectCard .project-btns {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-/* =========================================================*/
-/*                          CONTACT                         */
-/* =========================================================*/
-#contact {
-    background-color: var(--clr-primary-200);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 65vh;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-#contact .wide {
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 80%;
-}
-#contact h1 {
-    font-family: 'Southam Demo';
-    font-size: 5rem;
-    font-weight: lighter;
-    color: var(--clr-primary-400);
-}
-#contact a {
-    background-color: var(--clr-primary-400);
-    width: fit-content;
-    transition: background-color 0.2s ease, filter 0.2s ease-in-out, transform 0.2s;
-    margin-top: 15px;
-    padding: 10px;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-}
-#contact a:hover {
-    background-color: white;
-    filter: drop-shadow(-1px 1px 3px var(--clr-primary-400));
-    color: var(--clr-primary-900);
-    transform: translateY(-4px);
-}
-#contact a:active {
-    background-color: var(--clr-primary-400);
-}
 
 
-#contact .right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50%;
-}
-/* =========================================================*/
-/*                      CONTACT FORM                        */
-/* =========================================================*/
-#contact form {
-    display: flex; 
-    position: relative;
-    justify-content: flex-start;
-    flex-direction: column;
-    margin: .75rem 0;
-}
-#contact form p,
-#contact form input,
-#contact form textarea {
-    font-family: var(--ff-body);
-    font-size: 1.125rem;
-    width: 100%;
-    height: 2rem;
-    border-style: none;
-}
-#contact form textarea {
-    height: 5rem;
-    resize: none;
-}
-#contact form input,
-#contact form textarea {
-    padding: 10px; 
-    margin: 1rem 0;
-}
-#contact form button {
-    width: fit-content;
-    margin: 1rem 0 0 0;
-}
-#contact form button:active {
-    transform: translateY(4px);
-}
-/* =========================================================*/
-/*                            FOOTER                        */
-/* =========================================================*/
-footer { 
-    display: flex; 
-    position: relative;
-    justify-content: center;
-    height: 20vh;
-    align-items: center;
-    background-color: var(--clr-primary-900);
-}
 
-footer #legal {
-    position: absolute;
-    bottom: 12px; 
-    color: white;
-    font-size: .8rem;
-
-}
-footer .icons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 175px;
-}
-
-footer .icons .icon a img {
-    width: 40px;
-    height: 40px;
-    transition: transform 0.2s;
-}
-footer .icons .icon a img:hover {
-    transform: translateY(-4px);
-}
-footer .icons .icon a {
-    transition: filter 0.2s ease-in-out;
-}
-/* footer .icons .icon a:hover {
-    filter: drop-shadow(-1px 1px 3px #ffffff); 
-} */
 /* =========================================================*/
 /*                        MEDIA QUERIES                     */
 /* =========================================================*/
@@ -508,7 +97,7 @@ footer .icons .icon a {
 }
 
 /* Tablet */
-@media screen and (max-width:820px) {
+/* @media screen and (max-width:820px) {
     nav {
         background-color: white;
     }
@@ -588,9 +177,9 @@ footer .icons .icon a {
     #contact form textarea {
         margin: .625rem 0;
     }
-}
+} */
 /* iPhone */
-@media screen and (max-width:480px) {
+/* @media screen and (max-width:480px) {
     nav .container {
         background-color: white;
         width: 100vw;
@@ -604,10 +193,6 @@ footer .icons .icon a {
     }
     #home p {
         font-size: 1.5rem;
-    }
-    #home p.subheading {
-        font-size: 1.25rem;
-        margin-top: .75rem;
     }
     #about {
         height: auto;
@@ -679,7 +264,6 @@ footer .icons .icon a {
         width: 100%;
         margin: 2rem 0 0 0;
     }
-    
-}
+} */
 
 
