--- a/css/contact.css
+++ b/css/contact.css
@@ -13,7 +13,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    height: 70vh;
+    height: 75vh;
+    min-height: 75vh;
     background-color: var(--clr-primary-200);
 }
 #contact h3 {
